<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">Bingg Bongg</string>
    <string name="facebook_app_id" translatable="false">691514755320348</string>
    <string name="banner_ad_id" translatable="false">ca-app-pub-3940256099942544~3347511713</string>
    <string name="video_ad_id" translatabable="false">ca-app-pub-3940256099942544~3347511713</string>
    <string name="dynamic_link_filter" translatable="false">binggbongg.page.link</string>
    <string name="ios_bundle_id" translatable="false">com.app.livza</string>
    <string name="ios_app_store_id" translatable="false"/>
    <string name="notification_channel_id" translatable="false">binggbongg_notification_channel</string>
    <string name="layout_direction">0</string>
    <string name="login_with_mobile">Login with Mobile</string>
    <string name="facebook">Facebook</string>
    <string name="snap_and_share">Snap and \nShare every moments</string>
    <string name="millions_of_people_waiting">Millions of\nvideos waiting\nfor you</string>
    <string name="terms_and_conditions_des">By continuing, agree our &lt;b>Terms and conditions&lt;b/></string>
    <string name="bio">Bio</string>
    <string name="max_characters">Max 50 characters</string>
    <string name="Skip">Skip</string>
    <string name="choose_your">Choose your</string>
    <string name="interests">Interests</string>
    <string name="get_personalized">Get personalized video recommendations</string>
    <string name="fab_content">Select your interest</string>
    <string name="interest_warning">Please select your interest</string>
    <string name="following">Following</string>
    <string name="foryou">For You</string>
    <string name="addafav">Add to Favourites</string>
    <string name="addafav2">Add to Favourite</string>
    <string name="favourites">Favourites</string>
    <string name="unFav">Unfavorite</string>
    <string name="report_success_alert">Thanks! your report has been successfully registered.</string>
    <string name="add_fav_video_success">Video added to your favourite list successfully</string>
    <string name="add_fav_video_removed">Video removed to your favourite list successfully</string>
    <string name="video_call">Video Call</string>
    <string name="Original_sound">Original sound</string>
    <string name="sounds">Sounds</string>
    <string name="upload_sounds">Upload Sounds</string>
    <string name="liked_videos">Liked videos</string>
    <string name="preview">Preview</string>
    <string name="discard_recording_progress">Discard current sound and recording progress?</string>
    <string name="reshoot">Reshoot</string>
    <string name="add_comment">Add comment</string>
    <string name="gift_to_cash">You have %1$s Gifts worth %2$s $</string>
    <string name="portrait">Portrait</string>
    <string name="describe_your_video">Describe your video</string>
    <string name="describe_sample_hashtag">eg. #Friendship, #Nature</string>
    <string name="who_can_post_comments">Who can post / write comments</string>
    <string name="who_can_send_message">Who can send messages</string>
    <string name="Everyone">Everyone</string>
    <string name="block_lists">Block List</string>
    <string name="save_gallery">Save to gallery</string>
    <string name="post">Post</string>
    <string name="alert_close_this_video">Do you want to close this video?</string>
    <string name="upload_and_skip">Upload photo or Skip</string>
    <string name="name">Full name</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="next">Next</string>
    <string name="gender">Gender</string>
    <string name="gender_alert">Please select your gender</string>
    <string name="enter_name">Enter name</string>
    <string name="enter_date_of_birth">Enter Date of Birth</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="internet_disturb">Internet connection failed, Try again</string>
    <string name="away_from_chat">away from chat</string>
    <string name="settings">Privacy and Settings</string>
    <string name="okay">Okay</string>
    <string name="free_coins">Get free votes for your referrals</string>
    <string name="pick_image_intent_text">Choose an image</string>
    <string name="storage_error">Enable storage permission</string>
    <string name="audio_record_error">Enable microphone and storage pemission</string>
    <string name="camera_storage_error">Enable camera and storage permissions</string>
    <string name="camera_microphone_storage_error">Enable camera, microphone and storage permissions</string>
    <string name="camera_microphone_permission_error">Enable camera and microphone permissions</string>
    <string name="touch_to_full">Touch to full</string>
    <string name="followings">Followings</string>
    <string name="fans">Fans</string>
    <string name="hearts">Hearts</string>
    <string name="gems">Gems</string>
    <string name="gifts">Gifts</string>
    <string name="expired">Expired</string>
    <string name="your_membership">Your membership</string>
    <string name="renewal">Renewal</string>
    <string name="payment_id">Payment id</string>
    <string name="save">Save</string>
    <string name="swipe_change_photo">Swipe change photo</string>
    <string name="swipe_to_see_followings">Swipe left to see your followings</string>
    <string name="swipe_to_see_followers">Swipe right to see your fans</string>
    <string name="swipe_to_see_other_followings">Swipe left to see this user followings</string>
    <string name="swipe_to_see_other_followers">Swipe right to see this users fans</string>
    <string name="use_this_hash_tag">Use this Hashtag</string>
    <string name="use_this_sound">Use this Sound</string>
    <string name="related_videos">Related Videos</string>
    <string name="selected_song_sucess">Sound Selected Successfully</string>
    <string name="flip">Flip</string>
    <string name="timer">Timer</string>
    <string name="filter">Filter</string>
    <string name="flash">Flash</string>
    <string name="flash_not_support">Flash not supported</string>
    <string name="search_sounds">Search sounds</string>
    <string name="search_fav">Search Favourites</string>
    <string name="txt_warning">Please enter the Description </string>
    <string name="follow">Follow</string>
    <string name="unfollow">Unfollow</string>
    <string name="invalid_url_title">Invalid URL</string>
    <string name="invalid_url_text">The URL or room name you entered resulted in an invalid URL: %1$s
    </string>
    <string name="channel_error_title">Connection error</string>
    <string name="camera2_texture_only_error">Camera2 only supports capturing to texture. Either disable Camera2 or enable capturing to texture in the options.</string>
    <string name="swipe_to_skip">Swipe skip</string>
    <string name="no_followers_yet">No fans yet</string>
    <string name="no_followings_yet">No followings yet</string>
    <string name="no_gems_list_found">No vote list found</string>
    <string name="no_gift">No Gifts</string>
    <string name="no">No</string>
    <string name="really_want_exit">Are you sure want to exit?</string>
    <string name="really_want_logout">Are you sure want to logout?</string>
    <string name="really_want_clear">Are you sure want to clear chat?</string>
    <string name="profile_updated_successfully">Profile Updated Successfully</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="account_deactivated_by_admin">Your account has been deactivated by Admin</string>
    <string name="broadcast_deactivated_by_admin">Broadcast has been blocked by Admin</string>
    <string name="get_prime_benefits">Get Prime benefits</string>
    <string name="subscribe">Subscribe</string>
    <string name="stickers">Stickers</string>
    <string name="congratulations_you_got">Congratulations. You got </string>
    <string name="gems_free_coins"> gems free coins</string>
    <string name="coins">Coins</string>
    <string name="report_user">Report</string>
    <string name="unreported">Undo Report</string>
    <string name="undo_report_successfully">Undo Report successfully</string>
    <string name="user_alert_message">You cannot send message to this user</string>
    <string name="prime">Prime</string>
    <string name="send">Send</string>
    <string name="copy_link">Copy Link</string>
    <string name="whatsApp">WhatsApp</string>
    <string name="messenger">Messenger</string>
    <string name="shareTo">Share to</string>
    <string name="no_comments">No comments</string>
    <string name="not_enough_gems">Not enough coins</string>
    <string name="location">Location</string>
    <string name="select_all">Select all</string>
    <string name="no_gems_yet">No votes yet</string>
    <string name="free_gems_content">Invite a friend to join Bingg Bongg and get %1$s votes as reward.</string>
    <string name="invite_friends_reward">Invite your friends\nReward yourself</string>
    <string name="refer_your_friends">Refer your friends</string>
    <string name="invite_friends">Invite friends</string>
    <string name="watch_video">Watch Video</string>
    <string name="not_now">Not now</string>
    <string name="buy_gems">Buy votes</string>
    <string name="insufficient_funds">Insufficient funds</string>
    <string name="subscription_price">%1$s/%2$s</string>
    <string name="premium_member">Premium member</string>
    <string name="purchase_cancelled">Purchase cancelled</string>
    <string name="gems_purchase_response">Coins updated to your account</string>
    <string name="votes_purchase_response">Votes updated to your account</string>
    <string name="pref_room_key" translatable="false">room_preference</string>
    <string name="request_sent_successfully" translatable="false">Request sent successfully</string>
    <string name="pref_room_list_key" translatable="false">room_list_preference</string>
    <string name="pref_videosettings_key" translatable="false">video_settings_key</string>
    <string name="pref_videosettings_title" translatable="false">WebRTC video settings.</string>
    <string name="pref_videocall_key" translatable="false">videocall_preference</string>
    <string name="pref_videocall_title" translatable="false">Video call.</string>
    <string name="pref_videocall_dlg" translatable="false">Enable video in a call.</string>
    <string name="pref_videocall_default" translatable="false">true</string>
    <string name="pref_screencapture_key" translatable="false">screencapture_preference</string>
    <string name="pref_screencapture_title" translatable="false">Use screencapture.</string>
    <string name="pref_screencapture_default" translatable="false">false</string>
    <string name="pref_camera2_key" translatable="false">camera2_preference</string>
    <string name="pref_camera2_title" translatable="false">Use Camera2.</string>
    <string name="pref_camera2_default" translatable="false">true</string>
    <string name="pref_resolution_key" translatable="false">resolution_preference</string>
    <string name="exit">Exit</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="allow_pop_up_window">Allow pop-up window</string>
    <string name="pop_up_permission_description">Allow the pop-up permission to enjoy the incoming call functionalities even if the app is not in the background</string>
    <string name="don_t_ask_again">Don\'t ask again</string>
    <string name="allow">Allow</string>
    <string name="deny">Deny</string>
    <string name="allow_pop_up_tecno">Protected Apps</string>
    <string name="pop_up_permission_tecno">fundoo requires to be enabled in Protected Apps to background function properly.</string>
    <string name="hide_btm_bar_alert">Do you want to hide all icons?</string>
</resources>