<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical">


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_skip"
        style="@style/TextAshRegular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_margin="15dp"
        android:gravity="end"
        android:text="@string/Skip" />

    <com.google.android.material.textview.MaterialTextView
        style="@style/TextBlackBold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:text="@string/choose_your"
        android:textSize="@dimen/text_medium" />

    <com.google.android.material.textview.MaterialTextView
        style="@style/TextBlackBold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:text="@string/interests"
        android:textSize="@dimen/text_header" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:text="@string/get_personalized" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/interest_rec"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp">

        </androidx.recyclerview.widget.RecyclerView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_select"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_margin="16dp"
            android:backgroundTint="@color/colorPrimary"
            android:contentDescription="@string/fab_content"
            android:elevation="2dp"
            android:src="@drawable/fab_tick"
            app:backgroundTint="@color/colorPrimary"
            app:elevation="2dp"
            app:fabSize="normal"
            app:tint="@color/colorWhite" />

    </RelativeLayout>
</LinearLayout>