<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        app:cardBackgroundColor="@color/colorTransparent"
        app:cardCornerRadius="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="20dp"
            android:paddingBottom="20dp">

            <TextView
                android:id="@+id/txtTitle"
                style="@style/TextWhiteRegular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/font_regular"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:gravity="center"
                android:maxLines="1"
                android:text="@string/allow_pop_up_window"
                android:textSize="@dimen/text_header" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/dimenImage"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:src="@drawable/video_call_permission" />

            <TextView
                android:id="@+id/txt_description"
                style="@style/TextWhiteRegular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/font_light"
                android:gravity="center"
                android:lineSpacingExtra="6dp"
                android:text="@string/pop_up_permission_description"
                android:textSize="@dimen/text_medium" />

            <Button
                android:id="@+id/btnAllow"
                style="@style/ButtonPrimaryLight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="15dp"
                android:elevation="0dp"
                android:text="@string/allow" />

            <Button
                android:id="@+id/btnDeny"
                style="@style/ButtonWhiteLight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:elevation="0dp"
                android:text="@string/deny" />

            <CheckBox
                android:layout_marginTop="5dp"
                android:id="@+id/btnDontAsk"
                style="@style/TextWhiteRegular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/font_light"
                android:buttonTint="@color/colorPrimary"
                android:checked="false"
                android:text="@string/don_t_ask_again"
                android:textColor="@color/colorWhite" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>