<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        app:cardCornerRadius="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorTransparent"
            android:orientation="vertical"
            android:paddingTop="20dp"
            android:paddingBottom="20dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:textStyle="bold"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/font_regular"
                android:gravity="center"
                android:maxLines="1"
                android:text="@string/allow_pop_up_tecno"
                android:textColor="@color/white"
                android:textSize="16dp" />

            <ImageView
                android:id="@+id/dimenImage"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_gravity="center"
                android:src="@drawable/fundo_logo" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/font_regular"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/pop_up_permission_tecno"
                android:textColor="@color/white"
                android:textSize="@dimen/text_medium" />

            <Button
                android:id="@+id/btnAllow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:elevation="0dp"
                android:fontFamily="@font/font_regular"
                android:text="@string/allow"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/btnDeny"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:elevation="0dp"
                android:fontFamily="@font/font_regular"
                android:text="@string/deny"
                android:textColor="@color/white" />

            <CheckBox
                android:id="@+id/btnDontAsk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:buttonTint="@color/colorPrimary"
                android:checked="false"
                android:fontFamily="@font/font_regular"
                android:text="@string/don_t_ask_again"
                android:textColor="@color/white" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>