<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        app:cardCornerRadius="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/profile_bg"
            android:orientation="vertical"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">

            <TextView
                android:id="@+id/txtTitle"
                style="@style/TextWhiteRegular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:maxLines="1"
                android:text="@string/free_coins"
                android:textSize="@dimen/text_header" />

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/dimenImage"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_gravity="center"
                android:src="@drawable/green_diamond"
                app:riv_oval="true" />

            <TextView
                android:id="@+id/txt_description"
                style="@style/TextWhiteRegular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:maxLines="3"
                android:padding="10dp"
                android:text="@string/congratulations_you_got"
                android:textSize="@dimen/text_medium" />

            <Button
                android:id="@+id/btnOkay"
                style="@style/ButtonWhiteLight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:elevation="0dp"
                android:text="@string/okay" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>